--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+.idea/
+.vscode/
+build/
+sdkconfig
+sdkconfig.old
+
 # Prerequisites
 *.d
 
@@ -53,3 +59,6 @@ dkms.conf
 
 # debug information files
 *.dwo
+# ESP-IDF Component Manager
+managed_components/
+
